--- a/scss/blocks/_hero.scss
+++ b/scss/blocks/_hero.scss
@@ -11,6 +11,7 @@
         height: 496px;
         top: 0;
         right: 0;
+        z-index: 99;
         margin-top: 80px;
         background-image: url("../img/hero-bg.png");
         background-repeat: no-repeat;
