--- a/scss/blocks/_contact.scss
+++ b/scss/blocks/_contact.scss
@@ -1,7 +1,9 @@
+.contact {
+    background-color: $button-bg-primary;
+}
 .contact__container {
     padding-top: 58px;
     padding-bottom: 74px;
-    background-color: $button-bg-primary;
 }
 .contact__wrapper {
     max-width: 442px;
@@ -53,7 +55,7 @@
         background-repeat: no-repeat;
     }
 }
-.contact__alert{
+.contact__alert {
     display: none;
     margin-top: 4px;
     margin-bottom: 2px;
@@ -105,8 +107,10 @@
     background-color: #FA5959;
     box-shadow: 0px 8px 8px -4px rgba(73, 93, 207, 0.20012);
     border-radius: 5px;
+    transition: background-color 0.3s linear,
+                color 0.3s linear;
 
-    &:hover{
+    &:hover {
         border-color: $button-bg-danger;
         background-color: #fff;
         color: $button-bg-danger;
