--- a/scss/blocks/_sitenav.scss
+++ b/scss/blocks/_sitenav.scss
@@ -4,6 +4,7 @@
     top: 0;
     left: 0;
     z-index: 100;
+    box-shadow: 0px 5px 5px #ececec;
 }
 .sitenav__container {
     @include d-f;
@@ -127,7 +128,7 @@
         color: #fff;
     }
 
-    .sitenav__login{
+    .sitenav__login {
         width: 100%;
         padding: 16px;
         margin-top: 24px;
@@ -140,7 +141,7 @@
         border-radius: 5px;
         background-color: transparent;
     }
-    .sitenav__socials-networs{
+    .sitenav__socials-networs {
         display: flex;
         margin-top: auto;
     }
